[tool.poetry]
name = "use-poetry-python"
version = "0.1.0"
description = "Workflow for Using Poetry"
authors = ["Sai Ramya <ramyamrn2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
